      - debian-rules-missing-recommended-target
      - dh_pycentral-is-obsolete
      - dh_python-is-obsolete
      - illegal-multi-arch-value
      - non-empty-dependency_libs-in-la-file
    + Removed:
      - uses-dh-python-with-no-pycompat

  * checks/binaries:
    + [NT] Applied patch from Paul Wise to detect binaries embeddeding
      glee, glew and libtheora.  (Closes: #629288)
  * checks/debhelper{,.desc}:
    + [NT] Recognise that dh_python and dh_pycentral are now obsolete.
      (Closes: #496902, #541978)
  * checks/changes-file:
    + [NT] Always verify the checksums of changes-files.
  * checks/copyright-file:
    + [NT] Extended current dh_make template checks.  Thanks to
      Nelson A. de Oliveira for the patch.  (Closes: #598412)
  * checks/fields{,.desc}:
    + [NT] Allow "all" and "any" to appear together in the Architecture
      field of a .dsc file.  (Closes: #626775)
    + [NT] Added illegal-multi-arch-value.  (Closes: #616493)
  * checks/files:
    + [NT] Fixed two misnamed udeb tags, which lead to an internal
      error if triggered.  Thanks to Guillem Jover for the report.
      (Closes: #628754)
    + [NT] Added bad-perm-for-file-in-etc-sudoers.d tag.
      (Closes: #588831)
    + [CW] Do not issue missing-pre-dependency-on-multiarch-support for
      udebs.
    + [NT] Limit missing-pre-dependency-on-multiarch-support to real
      files only.  Previously it would also check symlinks.
      (Closes: #629648)
  * checks/java{,.desc}:
    + [NT] Sort the jar files by name, so they are checked in the same
      order.
    + [NT] Improved the description of classpath-contains-relative-path.
      (Closes: #629189)
    + [NT] Reduced false-positives of classpath-contains-relative-path.
      Relative classpaths are now okay if they point to jar files in
      /usr/share/java (but not subdirs thereof) and there is a strong
      libX-java dependency.  Alternatively if the classpath points to