@@ -1,0 +1,275 @@
+# List of "triplet architecture" relationships as provided by
+# dpkg-architecture - arch -> dir mapping
+# Last updated: 2011-06-12
+# With: Debian dpkg-architecture version 1.16.0.3.
+
+alpha alpha-linux-gnu
+amd64 x86_64-linux-gnu
+arm arm-linux-gnu
+armeb armeb-linux-gnu
+armel arm-linux-gnueabi
+armhf arm-linux-gnueabihf
+avr32 avr32-linux-gnu
+darwin-alpha alpha-darwin
+darwin-amd64 x86_64-darwin
+darwin-arm arm-darwin
+darwin-armeb armeb-darwin
+darwin-avr32 avr32-darwin
+darwin-hppa hppa-darwin
+darwin-i386 i386-darwin
+darwin-ia64 ia64-darwin
+darwin-m32r m32r-darwin
+darwin-m68k m68k-darwin
+darwin-mips mips-darwin
+darwin-mipsel mipsel-darwin
+darwin-powerpc powerpc-darwin
+darwin-ppc64 powerpc64-darwin
+darwin-s390 s390-darwin
+darwin-s390x s390x-darwin
+darwin-sh3 sh3-darwin
+darwin-sh3eb sh3eb-darwin
+darwin-sh4 sh4-darwin
+darwin-sh4eb sh4eb-darwin
+darwin-sparc sparc-darwin
+darwin-sparc64 sparc64-darwin
+freebsd-alpha alpha-freebsd
+freebsd-amd64 x86_64-freebsd
+freebsd-arm arm-freebsd
+freebsd-armeb armeb-freebsd
+freebsd-avr32 avr32-freebsd
+freebsd-hppa hppa-freebsd
+freebsd-i386 i386-freebsd
+freebsd-ia64 ia64-freebsd
+freebsd-m32r m32r-freebsd
+freebsd-m68k m68k-freebsd
+freebsd-mips mips-freebsd
+freebsd-mipsel mipsel-freebsd
+freebsd-powerpc powerpc-freebsd
+freebsd-ppc64 powerpc64-freebsd
+freebsd-s390 s390-freebsd
+freebsd-s390x s390x-freebsd
+freebsd-sh3 sh3-freebsd
+freebsd-sh3eb sh3eb-freebsd
+freebsd-sh4 sh4-freebsd
+freebsd-sh4eb sh4eb-freebsd
+freebsd-sparc sparc-freebsd
+freebsd-sparc64 sparc64-freebsd
+hppa hppa-linux-gnu
+hurd-alpha alpha-gnu
+hurd-amd64 x86_64-gnu
+hurd-arm arm-gnu
+hurd-armeb armeb-gnu
+hurd-avr32 avr32-gnu
+hurd-hppa hppa-gnu
+hurd-i386 i386-gnu
+hurd-ia64 ia64-gnu
+hurd-m32r m32r-gnu
+hurd-m68k m68k-gnu
+hurd-mips mips-gnu
+hurd-mipsel mipsel-gnu
+hurd-powerpc powerpc-gnu
+hurd-ppc64 powerpc64-gnu
+hurd-s390 s390-gnu
+hurd-s390x s390x-gnu
+hurd-sh3 sh3-gnu
+hurd-sh3eb sh3eb-gnu
+hurd-sh4 sh4-gnu
+hurd-sh4eb sh4eb-gnu
+hurd-sparc sparc-gnu
+hurd-sparc64 sparc64-gnu
+i386 i386-linux-gnu
+ia64 ia64-linux-gnu
+kfreebsd-alpha alpha-kfreebsd-gnu
+kfreebsd-amd64 x86_64-kfreebsd-gnu
+kfreebsd-arm arm-kfreebsd-gnu
+kfreebsd-armeb armeb-kfreebsd-gnu
+kfreebsd-avr32 avr32-kfreebsd-gnu
+kfreebsd-hppa hppa-kfreebsd-gnu
+kfreebsd-i386 i386-kfreebsd-gnu
+kfreebsd-ia64 ia64-kfreebsd-gnu
+kfreebsd-m32r m32r-kfreebsd-gnu
+kfreebsd-m68k m68k-kfreebsd-gnu
+kfreebsd-mips mips-kfreebsd-gnu
+kfreebsd-mipsel mipsel-kfreebsd-gnu
+kfreebsd-powerpc powerpc-kfreebsd-gnu
+kfreebsd-ppc64 powerpc64-kfreebsd-gnu
+kfreebsd-s390 s390-kfreebsd-gnu
+kfreebsd-s390x s390x-kfreebsd-gnu
+kfreebsd-sh3 sh3-kfreebsd-gnu
+kfreebsd-sh3eb sh3eb-kfreebsd-gnu
+kfreebsd-sh4 sh4-kfreebsd-gnu
+kfreebsd-sh4eb sh4eb-kfreebsd-gnu
+kfreebsd-sparc sparc-kfreebsd-gnu
+kfreebsd-sparc64 sparc64-kfreebsd-gnu
+knetbsd-alpha alpha-knetbsd-gnu
+knetbsd-amd64 x86_64-knetbsd-gnu
+knetbsd-arm arm-knetbsd-gnu
+knetbsd-armeb armeb-knetbsd-gnu
+knetbsd-avr32 avr32-knetbsd-gnu
+knetbsd-hppa hppa-knetbsd-gnu
+knetbsd-i386 i386-knetbsd-gnu
+knetbsd-ia64 ia64-knetbsd-gnu
+knetbsd-m32r m32r-knetbsd-gnu
+knetbsd-m68k m68k-knetbsd-gnu
+knetbsd-mips mips-knetbsd-gnu
+knetbsd-mipsel mipsel-knetbsd-gnu
+knetbsd-powerpc powerpc-knetbsd-gnu
+knetbsd-ppc64 powerpc64-knetbsd-gnu
+knetbsd-s390 s390-knetbsd-gnu
+knetbsd-s390x s390x-knetbsd-gnu
+knetbsd-sh3 sh3-knetbsd-gnu
+knetbsd-sh3eb sh3eb-knetbsd-gnu
+knetbsd-sh4 sh4-knetbsd-gnu
+knetbsd-sh4eb sh4eb-knetbsd-gnu
+knetbsd-sparc sparc-knetbsd-gnu
+knetbsd-sparc64 sparc64-knetbsd-gnu
+kopensolaris-alpha alpha-kopensolaris-gnu
+kopensolaris-amd64 x86_64-kopensolaris-gnu
+kopensolaris-arm arm-kopensolaris-gnu
+kopensolaris-armeb armeb-kopensolaris-gnu
+kopensolaris-avr32 avr32-kopensolaris-gnu
+kopensolaris-hppa hppa-kopensolaris-gnu
+kopensolaris-i386 i386-kopensolaris-gnu
+kopensolaris-ia64 ia64-kopensolaris-gnu
+kopensolaris-m32r m32r-kopensolaris-gnu
+kopensolaris-m68k m68k-kopensolaris-gnu
+kopensolaris-mips mips-kopensolaris-gnu
+kopensolaris-mipsel mipsel-kopensolaris-gnu
+kopensolaris-powerpc powerpc-kopensolaris-gnu
+kopensolaris-ppc64 powerpc64-kopensolaris-gnu
+kopensolaris-s390 s390-kopensolaris-gnu
+kopensolaris-s390x s390x-kopensolaris-gnu
+kopensolaris-sh3 sh3-kopensolaris-gnu
+kopensolaris-sh3eb sh3eb-kopensolaris-gnu
+kopensolaris-sh4 sh4-kopensolaris-gnu
+kopensolaris-sh4eb sh4eb-kopensolaris-gnu
+kopensolaris-sparc sparc-kopensolaris-gnu
+kopensolaris-sparc64 sparc64-kopensolaris-gnu
+lpia i386-linux-gnulp
+m32r m32r-linux-gnu
+m68k m68k-linux-gnu
+mips mips-linux-gnu
+mipsel mipsel-linux-gnu
+netbsd-alpha alpha-netbsd
+netbsd-amd64 x86_64-netbsd
+netbsd-arm arm-netbsd
+netbsd-armeb armeb-netbsd
+netbsd-avr32 avr32-netbsd
+netbsd-hppa hppa-netbsd
+netbsd-i386 i386-netbsd
+netbsd-ia64 ia64-netbsd
+netbsd-m32r m32r-netbsd
+netbsd-m68k m68k-netbsd
+netbsd-mips mips-netbsd
+netbsd-mipsel mipsel-netbsd
+netbsd-powerpc powerpc-netbsd
+netbsd-ppc64 powerpc64-netbsd
+netbsd-s390 s390-netbsd
+netbsd-s390x s390x-netbsd
+netbsd-sh3 sh3-netbsd
+netbsd-sh3eb sh3eb-netbsd
+netbsd-sh4 sh4-netbsd
+netbsd-sh4eb sh4eb-netbsd
+netbsd-sparc sparc-netbsd
+netbsd-sparc64 sparc64-netbsd
+openbsd-alpha alpha-openbsd
+openbsd-amd64 x86_64-openbsd
+openbsd-arm arm-openbsd
+openbsd-armeb armeb-openbsd
+openbsd-avr32 avr32-openbsd
+openbsd-hppa hppa-openbsd
+openbsd-i386 i386-openbsd
+openbsd-ia64 ia64-openbsd
+openbsd-m32r m32r-openbsd
+openbsd-m68k m68k-openbsd
+openbsd-mips mips-openbsd
+openbsd-mipsel mipsel-openbsd
+openbsd-powerpc powerpc-openbsd
+openbsd-ppc64 powerpc64-openbsd
+openbsd-s390 s390-openbsd
+openbsd-s390x s390x-openbsd
+openbsd-sh3 sh3-openbsd
+openbsd-sh3eb sh3eb-openbsd
+openbsd-sh4 sh4-openbsd
+openbsd-sh4eb sh4eb-openbsd
+openbsd-sparc sparc-openbsd
+openbsd-sparc64 sparc64-openbsd
+powerpc powerpc-linux-gnu
+powerpcspe powerpc-linux-gnuspe
+ppc64 powerpc64-linux-gnu
+s390 s390-linux-gnu
+s390x s390x-linux-gnu
+sh3 sh3-linux-gnu
+sh3eb sh3eb-linux-gnu
+sh4 sh4-linux-gnu
+sh4eb sh4eb-linux-gnu
+solaris-alpha alpha-solaris
+solaris-amd64 x86_64-solaris
+solaris-arm arm-solaris
+solaris-armeb armeb-solaris
+solaris-avr32 avr32-solaris
+solaris-hppa hppa-solaris
+solaris-i386 i386-solaris
+solaris-ia64 ia64-solaris
+solaris-m32r m32r-solaris
+solaris-m68k m68k-solaris
+solaris-mips mips-solaris
+solaris-mipsel mipsel-solaris
+solaris-powerpc powerpc-solaris
+solaris-ppc64 powerpc64-solaris
+solaris-s390 s390-solaris
+solaris-s390x s390x-solaris
+solaris-sh3 sh3-solaris
+solaris-sh3eb sh3eb-solaris
+solaris-sh4 sh4-solaris
+solaris-sh4eb sh4eb-solaris
+solaris-sparc sparc-solaris
+solaris-sparc64 sparc64-solaris
+sparc sparc-linux-gnu
+sparc64 sparc64-linux-gnu
+uclibc-linux-alpha alpha-linux-uclibc
+uclibc-linux-amd64 x86_64-linux-uclibc
+uclibc-linux-arm arm-linux-uclibc
+uclibc-linux-armeb armeb-linux-uclibc
+uclibc-linux-armel arm-linux-uclibceabi
+uclibc-linux-avr32 avr32-linux-uclibc
+uclibc-linux-hppa hppa-linux-uclibc
+uclibc-linux-i386 i386-linux-uclibc
+uclibc-linux-ia64 ia64-linux-uclibc
+uclibc-linux-m32r m32r-linux-uclibc
+uclibc-linux-m68k m68k-linux-uclibc
+uclibc-linux-mips mips-linux-uclibc
+uclibc-linux-mipsel mipsel-linux-uclibc
+uclibc-linux-powerpc powerpc-linux-uclibc
+uclibc-linux-ppc64 powerpc64-linux-uclibc
+uclibc-linux-s390 s390-linux-uclibc
+uclibc-linux-s390x s390x-linux-uclibc
+uclibc-linux-sh3 sh3-linux-uclibc
+uclibc-linux-sh3eb sh3eb-linux-uclibc
+uclibc-linux-sh4 sh4-linux-uclibc
+uclibc-linux-sh4eb sh4eb-linux-uclibc
+uclibc-linux-sparc sparc-linux-uclibc
+uclibc-linux-sparc64 sparc64-linux-uclibc
+uclinux-alpha alpha-uclinux-uclibc
+uclinux-amd64 x86_64-uclinux-uclibc
+uclinux-arm arm-uclinux-uclibc
+uclinux-armeb armeb-uclinux-uclibc
+uclinux-armel arm-uclinux-uclibceabi
+uclinux-avr32 avr32-uclinux-uclibc
+uclinux-hppa hppa-uclinux-uclibc
+uclinux-i386 i386-uclinux-uclibc
+uclinux-ia64 ia64-uclinux-uclibc
+uclinux-m32r m32r-uclinux-uclibc
+uclinux-m68k m68k-uclinux-uclibc
+uclinux-mips mips-uclinux-uclibc
+uclinux-mipsel mipsel-uclinux-uclibc
+uclinux-powerpc powerpc-uclinux-uclibc
+uclinux-ppc64 powerpc64-uclinux-uclibc
+uclinux-s390 s390-uclinux-uclibc
+uclinux-s390x s390x-uclinux-uclibc
+uclinux-sh3 sh3-uclinux-uclibc
+uclinux-sh3eb sh3eb-uclinux-uclibc
+uclinux-sh4 sh4-uclinux-uclibc
+uclinux-sh4eb sh4eb-uclinux-uclibc
+uclinux-sparc sparc-uclinux-uclibc
+uclinux-sparc64 sparc64-uclinux-uclibc
