@@ -1,0 +1,1 @@
+E: libbasic2: missing-pre-dependency-on-multiarch-support
