@@ -6,9 +6,9 @@
 ARCH=$(shell dpkg-architecture -qDEB_HOST_ARCH)
 
 ifeq (i386,$(ARCH))
-    TRIPLETT = i386-linux-gnu
+    WRONG_TRIPLETT = x86_64-linux-gnu
 else
-    TRIPLETT = x86_64-linux-gnu
+    WRONG_TRIPLETT = i386-linux-gnu
 endif
 
 
@@ -16,9 +16,9 @@ all:
 	gcc -fPIC -shared -Wl,-z,defs -Wl,-soname,libbasic.so.2 -o libbasic.so.2 basic.c
 
 install:
-	# install it under the correct triplet directory
-	install -d $(DESTDIR)/usr/lib/$(TRIPLETT)
-	install -m 644 -c -s libbasic.so.2 $(DESTDIR)/usr/lib/$(TRIPLETT)/libbasic.so.2
+	# Install it once under the wrong dir
+	install -d $(DESTDIR)/usr/lib/$(WRONG_TRIPLETT)
+	install -m 644 -c -s libbasic.so.2 $(DESTDIR)/usr/lib/$(WRONG_TRIPLETT)/libbasic.so.2
 
 clean distclean:
 	rm -f libbasic.so.2
