@@ -1,0 +1,7 @@
+Testname: binaries-multiarch-wrong-dir
+Sequence: 6000
+Version: 1.0
+Description: Multiarch-related tests but not multiarch itself
+Architecture: i386 amd64
+Test-For:
+ triplet-dir-and-architecture-mismatch
