@@ -1,0 +1,2 @@
+s/i386-linux-gnu/x86_64-linux-gnu/
+s/is for i386/is for amd64/
