@@ -1,3 +1,0 @@
-E: binaries-multiarch: missing-pre-dependency-on-multiarch-support
-E: binaries-multiarch: triplet-dir-and-architecture-mismatch usr/lib/x86_64-linux-gnu/ is for amd64
-I: binaries-multiarch: no-symbols-control-file usr/lib/x86_64-linux-gnu/libbasic.so.2
